@@ -153,7 +153,7 @@ and with a great deal of experience in similar roles I feel I have a
 wide view of GNOME's goals and the capabilities and time to serve as an
 effective board member.
 &quot;<br />
-Affiliation: None.<br />
+Affiliation: North Somerset Council.<br />
 Full statement at <a href="http://mail.gnome.org/archives/foundation-announce/2002-November/msg00001.html">http://mail.gnome.org/archives/foundation-announce/2002-November/msg00001.html</a>
 </P>
 
@@ -194,7 +194,7 @@ and would like to see more events such as Sun's developer courses and the
 tutorials planned for next year's GUADEC. Experience serving on committees
 both at state and national level.
 &quot;<br />
-Affiliation: None.<br />
+Affiliation:  CommSecure Pty Ltd.<br />
 Full statement at <a href="http://mail.gnome.org/archives/foundation-announce/2002-November/msg00004.html">http://mail.gnome.org/archives/foundation-announce/2002-November/msg00004.html</a>
 </P>
 
@@ -239,7 +239,7 @@ since 1998, focussing on language bindings (I am maintainer of the
 Python bindings) and the platofrm libraries (I maintain libglade).  I am 
 currently serving on the 2002 board.
 &quot;<br />
-Affiliation: None.<br />
+Affiliation: Data Analysis Australia.<br />
 Full statement at <a href="http://mail.gnome.org/archives/foundation-announce/2002-November/msg00007.html">http://mail.gnome.org/archives/foundation-announce/2002-November/msg00007.html</a>
 </P>
 
@@ -255,6 +255,24 @@ promote our project and achievements aggressively.
 &quot;<br />
 Affiliation: None.<br />
 Full statement at <a href="http://mail.gnome.org/archives/foundation-announce/2002-November/msg00008.html">http://mail.gnome.org/archives/foundation-announce/2002-November/msg00008.html</a>
+</P>
+
+<P>13. JIM GETTYS<br />
+&quot;
+I'm announcing myself as a candidate for the 2002 elections of the
+GNOME Foundation board of directors.
+<br />
+The largest value I bring to Gnome is one of perspective to the operation 
+of a number of different styles of organizations. Specifically, GNOME 
+needs to continue to be open to contributions of all sorts, whether code, 
+or translations, or web work, to UI design and graphics, to name a few.
+<br />
+While I don't currently write Gnome code itself, I do hack on the X Window 
+System, as I have for a long time; most recently on the RandR extension.  
+I've been on the Gnome board the last two years.
+&quot;<br />
+Affiliation: Hewlett-Packard.<br />
+Full statement at <a href="http://mail.gnome.org/archives/foundation-announce/2002-November/msg00009.html">http://mail.gnome.org/archives/foundation-announce/2002-November/msg00009.html</a>
 </P>
 
 <P>13. LESLIE PROCTOR<br />
@@ -371,18 +389,17 @@ Full statement at <a href="http://mail.gnome.org/archives/foundation-announce/20
 
 <P>21. SRI RAMKRISHNA<br />
 &quot;
-I'm running for the GNOME Foundation board in order to help GNOME and 
-in the process better myself own helps by making GNOME problems, my 
-problems.  While I'm not a serious coder I can code; I think my talents 
-really lie in facilitating and attacking problems from a high level.  I 
-would like to help the GNOME project grow further by encouraging the 
-use of GEP, help get documentation complete, and establish more desktop 
-standards.  I've had experience in leading a diverse engineering team, 
-worked on projects that spanned many physical locations, and had some 
-management experience.  All of which requires critical thinking and 
-planning.  Thanks.
+I'm running for the GNOME Foundation board in order to help GNOME and in
+the process better myself by making GNOME problems, my problems.
+While I'm not a serious coder I can code; I think my talents really lie in
+facilitating and attacking problems from a high level.  I would like to
+help the GNOME project grow further by encouraging the use of GEP, help
+get documentation complete, and establish more desktop standards.  I've
+had experience in leading a diverse engineering team, worked on projects
+that spanned many physical locations, and had some management experience.
+All of which requires critical thinking and planning.  Thanks.
 &quot;<br />
-Affiliation: None.<br />
+Affiliation: Intel.<br />
 Full statement at <a href="http://mail.gnome.org/archives/foundation-announce/2002-November/msg00020.html">http://mail.gnome.org/archives/foundation-announce/2002-November/msg00020.html</a>
 </P>
 
