@@ -1,3 +1,7 @@
+2002-11-06  Vincent Untz  <vincent@vuntz.net>
+
+	* ballot-summary.html: added Jim Gettys and some affiliations.
+
 2002-11-05  Vincent Untz  <vincent@vuntz.net>
 
 	* ballot-summary.html: updated Jonathan's summary.
